[tool.poetry]
name = "an_nav"
version = "0.1.0"
description = ""
authors = ["AnggaraNothing <anggarayamap@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
kaitaistruct = "^0.10"
lark-parser = "^0.12.0"

[tool.poetry.dev-dependencies]
Nuitka = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
